rework change events